[workspace]
resolver = "3"

members = [
    "crates/rollup-boost",
    "crates/websocket-proxy",
    "crates/flashblocks-rpc",
]

[workspace.dependencies]
rollup-boost = { path = "crates/rollup-boost" }

tracing = "0.1.4"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3.31"
thiserror = "2.0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.96"
metrics = "0.24.0"
metrics-derive = "0.1"
tokio = { version = "1", features = ["full"] }
eyre = "0.6.12"
url = "2.2.0"
sha2 = { version = "0.10", default-features = false }
backoff = "0.4.0"

# Reth deps
reth-optimism-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }

# Alloy libraries
alloy-rpc-types-engine = "1.0.41"
alloy-rpc-types-eth = "1.0.41"
alloy-primitives = { version = "1.4.1", features = ["rand"] }
alloy-serde = "1.0.41"
alloy-eips = "1.0.41"
alloy-json-rpc = "1.0.41"
alloy-consensus = "1.0.41"
alloy-rpc-types = "1.0.41"
alloy-genesis = "1.0.41"
alloy-rpc-client = "1.0.41"
alloy-provider = "1.0.41"
op-alloy-network = "0.22.0"
op-alloy-rpc-types-engine = "0.22.0"
op-alloy-consensus = "0.22.0"
op-alloy-rpc-types = "0.22.0"
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["redis"] }

[patch."https://github.com/paradigmxyz/reth"]
reth-optimism-payload-builder = { git = "https://github.com/okx/reth", branch = "upstream/dev" }
reth-db = { git = "https://github.com/okx/reth", branch = "upstream/dev" }
reth-node-api = { git = "https://github.com/okx/reth", branch = "upstream/dev" }
reth-node-builder = { git = "https://github.com/okx/reth", branch = "upstream/dev" }
reth-node-core = { git = "https://github.com/okx/reth", branch = "upstream/dev" }
reth-optimism-chainspec = { git = "https://github.com/okx/reth", branch = "upstream/dev" }
reth-optimism-cli = { git = "https://github.com/okx/reth", branch = "upstream/dev" }
reth-optimism-evm = { git = "https://github.com/okx/reth", branch = "upstream/dev" }
reth-optimism-forks = { git = "https://github.com/okx/reth", branch = "upstream/dev" }
reth-optimism-node = { git = "https://github.com/okx/reth", branch = "upstream/dev" }
reth-optimism-primitives = { git = "https://github.com/okx/reth", branch = "upstream/dev" }
reth-optimism-rpc = { git = "https://github.com/okx/reth", branch = "upstream/dev" }
reth-primitives = { git = "https://github.com/okx/reth", branch = "upstream/dev" }
reth-primitives-traits = { git = "https://github.com/okx/reth", branch = "upstream/dev" }
reth-provider = { git = "https://github.com/okx/reth", branch = "upstream/dev" }
reth-rpc-eth-api = { git = "https://github.com/okx/reth", branch = "upstream/dev" }
reth-rpc-server-types = { git = "https://github.com/okx/reth", branch = "upstream/dev" }
reth-rpc-layer = { git = "https://github.com/okx/reth", branch = "upstream/dev" }
reth-tasks = { git = "https://github.com/okx/reth", branch = "upstream/dev" }
reth-tracing = { git = "https://github.com/okx/reth", branch = "upstream/dev" }
reth-e2e-test-utils = { git = "https://github.com/okx/reth", branch = "upstream/dev" }
